# VERISAFE-Framework

./: .gitignore  DEMO_ARCHITECTURE.md  DEMO_READY.md  MC_DC_ROADMAP.md  QUICK_START.md  README.md  SETUP.md  UnitTestGenLocal.code-workspace  VERISAFE.code-workspace  VERISAFE_MULTI_AGENT_WORKFLOW.md  ai-test-gen.bat  convert_analysis.py  create_APPROVED_flag.py  install.bat  package_demo_option_a.ps1  probe_ollama.py  pyproject.toml  requirements.txt  run_demo.py  run_web.py  safety_policy.yaml  vendor_googletest.ps1
.github/workflows/: ci.yml
CW_Test_Analyzer/: README.md  ai-c-test-analyzer.bat  pyproject.toml  requirements.txt  setup.py
CW_Test_Analyzer/ai_c_test_analyzer/: __init__.py  analyzer.py  cli.py  mcdc.py  safety_policy.py
CW_Test_Analyzer/ai_c_test_analyzer.egg-info/: SOURCES.txt
CW_Test_Analyzer/tests/analysis/: file_summaries.txt  hardware_functions.txt
CW_Test_Cov/: README.md  ai-c-testcov.bat  pyproject.toml  requirements.txt  setup.py
CW_Test_Cov/ai_c_test_cov.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CW_Test_Cov/ai_c_test_coverage/: __init__.py  cli.py  coverage.py  safety_policy.py
CW_Test_Gen/: .gitignore  MANIFEST.in  README.md  ai-c-testgen.bat  pyproject.toml  requirements.txt  setup.py
CW_Test_Gen/ai_c_test_generator/: __init__.py  approvals.py  cli.py  function_manifest.py  generator.py  generator.py.backup  intelligence.py  llm_config.py  planner.py  safety_policy.py  validator.py
CW_Test_Run/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  ai-test-runner.bat  generate_and_test_all.py  pyproject.toml  requirements.txt  setup.py
CW_Test_Run/RailwaySignalSystem/tests/analysis/: analysis.json  analysis.xlsx  call_depths.txt  functions.txt
CW_Test_Run/ai_test_runner/: __init__.py  cli.py  cli.py.old  safety_policy.py
CW_Test_Run/gtest/: gtest.h
CW_Test_Run/stubs/: Arduino.h  Arduino_stubs.cpp  Arduino_stubs.h  FS.h  HTTPClient.cpp  HTTPClient.h  MockHTTPClient.h  MockSPIFFS.h  SPIFFS.cpp  SPIFFS.h
CW_Test_Run/tests/: test_cli.py
RailwaySignalSystem/include/railway/: Types.h
RailwaySignalSystem/include/railway/app/: BlockController.h
RailwaySignalSystem/include/railway/drivers/: SignalHead.h  TrackCircuitInput.h
RailwaySignalSystem/include/railway/hal/: ArduinoGpio.h  IClock.h  IGpio.h  PlatformHal.h
RailwaySignalSystem/include/railway/logic/: ControllerHelpers.h
RailwaySignalSystem/src/: CMakeLists.txt
RailwaySignalSystem/src/drivers/: TrackCircuitInput.cpp
RailwaySignalSystem/src/hal/: ArduinoGpio.cpp
RailwaySignalSystem/src/logic/: ControllerLogic.cpp
SampleProjects/RailwaySignalSystem/include/railway/hal/: MockGpio.h
SampleProjects/RailwaySignalSystem/include/railway/logic/: ControllerLogic.h  Interlocking.h
SampleProjects/RailwaySignalSystem/src/app/: BlockController.cpp  main.cpp
SampleProjects/RailwaySignalSystem/src/drivers/: SignalHead.cpp
SampleProjects/RailwaySignalSystem/src/hal/: MockGpio.cpp  PlatformHal_host.cpp  SteadyClock.cpp
SampleProjects/RailwaySignalSystem/src/logic/: ControllerHelpers.cpp  Interlocking.cpp
actions/: __init__.py  actions.py
cli/: __init__.py  menu.py
schemas/: mcdc_gaps.schema.json  planning_constraints.schema.json  repo_scan.schema.json  scenarios.schema.json  validation_report.schema.json
scripts/: clone_gtest.ps1
session/: __init__.py  controller.py  state.py
tools/: run_planner.py
tools/llm_test/: benchmark_ollama.py  test_ollama.py
tools/schema/: run_example_validate.py  run_validate_analysis.py  run_validate_planning.py  run_validate_scenarios.py  test_scenarios.py  test_validate.py  validate.py  validate_repo_scan.py
verisafe-backend/: README.md  app.py
verisafe-ui/: README.md  app.js  index.html  styles.css
