[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unittestgen"
version = "0.1.0"
description = "A tool for generating unit tests"
authors = [{name = "Swathantra Pulicherla"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]