[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-c-test-analyzer"
version = "0.1.0"
description = "AI-powered C/C++ code analyzer for unit testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=3.1.0"
]

[project.scripts]
ai-c-test-analyzer = "ai_c_test_analyzer.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_c_test_analyzer*"]